--- a/new_task.html
+++ b/new_task.html
@@ -38,6 +38,7 @@
                     <a href="index.html" class="btn btn-secondary">Cancelar</a>
                     <button class="btn btn-primary" id="btn_guardar">Guardar</button>
                 </div>
+                <div class="text-center alert-danger p-2 mt-3 d-none" id="error"></div>
 
             </div>
         </div>
@@ -54,6 +55,7 @@
     </div>
 
     <script src="asset/js/bootstrap.bundle.min.js"></script>
+    <script src="asset/js/new_task.js"></script>
 </body>
 
 </html>
