--- a/edit_task.html
+++ b/edit_task.html
@@ -37,9 +37,9 @@
                 </div>
                 <div class="text-center">
                     <a href="index.html" class="btn btn-secondary">Cancelar</a>
-                    <button class="btn btn-primary" id="btn_guardar">Atualizar</button>
+                    <button class="btn btn-primary" id="btn_atualizar">Atualizar</button>
                 </div>
-
+                <div class="text-center alert-danger p-2 mt-3 d-none" id="error"></div>
             </div>
         </div>
 
@@ -55,6 +55,7 @@
     </div>
 
     <script src="asset/js/bootstrap.bundle.min.js"></script>
+    <script src="asset/js/edit_task.js"></script>
 </body>
 
 </html>
