--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             <div class="col text-end">
                 <div class="d-flex justify-content-end">
                     <select id="select-filter" class="form-select me-3 w-50">
-                        <option value=""></option>
-                        <option value="">filtro 1</option>
-                        <option value="">filtro 2</option>
+                        <option value="all">all</option>
+                        <option value="new">new</option>
+                        <option value="in progress">in progress</option>                     
+                        <option value="canceled">canceled</option>                        
+                        <option value="done">done</option>                    
                     </select>
                     <button class="btn btn-primary" id="btn_new_task"><i class="fa-solid fa-plus me-2"></i>Nova tarefa</button>
                 </div>
